[package]
name = "ray-tracing-toy"
version = "0.1.0"
authors = ["Jason King <chn.kei@gmail.com>"]
edition = "2018"

[dependencies]
rt = { path = "rt" }
rand = "0.7.0"

[workspace]
members = [
	"rt",

    "shader-rt",

    "week0chap01",
    "week0chap02",
    "week0chap03",
    "week0chap04",
    "week0chap05",
    "week0chap06",
    "week0chap07",
    "week0chap08",
    "week0chap09",
    "week0chap10",
    "week0chap11",
    "week0chap12",
]

[[bin]]
name = "shader-rt"
path = "shader-rt/src/main.rs"

[[bin]]
name = "week0chap01"
path = "week0chap01/src/main.rs"

[[bin]]
name = "week0chap02"
path = "week0chap02/src/main.rs"

[[bin]]
name = "week0chap03"
path = "week0chap03/src/main.rs"

[[bin]]
name = "week0chap04"
path = "week0chap04/src/main.rs"

[[bin]]
name = "week0chap05"
path = "week0chap05/src/main.rs"

[[bin]]
name = "week0chap06"
path = "week0chap06/src/main.rs"

[[bin]]
name = "week0chap07"
path = "week0chap07/src/main.rs"

[[bin]]
name = "week0chap08"
path = "week0chap08/src/main.rs"

[[bin]]
name = "week0chap09"
path = "week0chap09/src/main.rs"

[[bin]]
name = "week0chap10"
path = "week0chap10/src/main.rs"

[[bin]]
name = "week0chap11"
path = "week0chap11/src/main.rs"

[[bin]]
name = "week0chap12"
path = "week0chap12/src/main.rs"
